manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-service
  namespace: eks-fargate-ms
spec:
  selector:
    app: eks-ms  # This must match your deployment's pod labels
  ports:
    - protocol: TCP
      port: 80          # What other pods use to access it
      targetPort: 3000  # What your container listens on
  type: ClusterIP       # Default, for internal-only access
