manifests/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-fe-to-ms
  namespace: qa-eks-fargate-ms  # Namespace where MS is deployed
spec:
  podSelector: {}  # Targets all pods in this namespace
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: eks-fargate-fe  # The label of the FE namespace
      ports:
        - protocol: TCP
          port: 80
